[package]
name = "photo-cycler-webthing"
version = "1.0.0"
authors = ["Michael Stegeman"]

[dependencies]
actix-web = { version = "0.7", default-features = false, features = ["brotli", "flate2-c", "cell"] }
rand = "0.7"
serde_json = "1.0"
webthing = "0.12"

[[bin]]
name = "photo-cycler-webthing"
path = "src/photo-cycler-webthing.rs"
