[package]
name = "photo-cycler-webthing"
version = "1.0.0"
authors = ["Michael Stegeman"]
edition = "2018"

[dependencies]
actix-files = "0.3"
actix-rt = "1.1"
actix-web = "3.0"
rand = "0.7"
serde_json = "1.0"
webthing = "0.13"

[[bin]]
name = "photo-cycler-webthing"
path = "src/photo-cycler-webthing.rs"
